*gitlab-grit-2.6.9 (28 Jun 2014)

  28 Jun 2014; Manuel Rüger <mrueg@gentoo.org> +gitlab-grit-2.6.9.ebuild,
  -gitlab-grit-2.6.8.ebuild:
  [dev-ruby/gitlab-grit] Version bump.

*gitlab-grit-2.6.8 (14 Jun 2014)

  14 Jun 2014; Manuel Rüger <mrueg@gentoo.org> +gitlab-grit-2.6.8.ebuild,
  -gitlab-grit-2.6.5.ebuild:
  [dev-ruby/gitlab-grit] Version bump. Cleanup old.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> gitlab-grit-2.6.5.ebuild:
  [dev-ruby/gitlab-grit] Add missing file.

*gitlab-grit-2.6.5 (19 Apr 2014)

  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +gitlab-grit-2.6.5.ebuild,
  +metadata.xml:
  [dev-ruby/gitlab-grit] Initial version.