@@ -1,1 +1,2 @@
 DIST gitlab-grit-2.6.9.tar.gz 6006417 SHA256 4129cef2e83eb4e2c4b20ccdf7929a3240658da4377c156b6233fb3d7ec6a307 SHA512 a102bc2d09712e20f23be12eeb98a19f12e59a02059f945749d05e553b4611f695246a0c617cdafc747357b15c14c1d2e2d038188471f85398cee3ac2c3eee1c WHIRLPOOL 8cf677f2daa906e0098933a49030a59ecf565b249dafb2bb4375839815fd494527a0a04da9f7cedfe41db8004746c157cb775bdb713176dc03a4c4b13b4914ba
+DIST gitlab-grit-2.7.0.tar.gz 6006445 SHA256 9a3e93e5ecf9e80b2f165363639863e823dc6690d0389333eb79648ea540f4ca SHA512 18cfdba68e0ee905175154447bec0db97b54a903a5c6ffb7a5c430b35966273c29fc6d0ffdc0910f1af76ad6b687abf99c474b06ceaa84fdcb5a2681af7b825b WHIRLPOOL bee39dfb608bc44e74513ae233ac142739612771d7acbea8ff3e7c03e257c9087267c847b9c5e0317cf761abbdf559358fdefb3f2ad57e99850a4de06f7681a8
